--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
   <main class="flex-container">
-    <div role="contentinfo" class="qr-code-item">
+    <section class="qr-code-item">
       <img class="qr-img" src="images/image-qr-code.png" alt="QR code image">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    </section>
   </main>
 
 </body>
